Finished work HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<p>Panela Leung</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Generation Maker Lab</title>
+<meta charset="utf-8">
+</head>
+<body>
+<nav class ="navClass">
+	<ul >
+		<li><a href="index.html">Home</a></li>
+		<li><a href="#">World Builders Academy</a>
+			<ul class = "submenu">
+				<li><a href="school.html">Infant Care Center</a></li>
+				<li><a href="Primary.html">Preschool</a></li>
+				<li><a href="homeschool.html">Lower Elementry</a></li>
+			</ul>
+		</li>
+		<li><a href="#">Integrated Learning</a>
+			<ul class = "submenu">
+				<li><a href="3dprinting.html"> 3D Printing </a></li>
+				<li><a href="#"> Programming </a></li>
+				<li><a href="robotics.html"> Robotics </a></li>
+			</ul>
+        </li>
+		<li><a href="FQA.html">FQA</a></li>
+	</ul>
+</nav>
+<main>
+<div class ="text box">
+    <h1> Generation Maker Lab</h1>
+    <img src="images/genlogo.jpg" alt="Generation Maker Lab Logo " width="580" height="200">
+	<p>Mastery based curriculum in STEM designed for the curious of all ages to design and build.</p>
+	
+	<p>Schedule your visit today!</p>
+	<h3>Maker Workshops</h3>
+	<ul>
+		<li>Introduction to Game Design</li>
+		<li>3D Printing and Modeling</li>
+		<li>Web Design</li>
+		<li>Painting</li>
+		<li>Pottery</li>
+    </ul>
+    <img src="images/IMG_5250.jpg" alt="Child Scientist with magnifying glass" width="250" height="300">
+    <h4>Ask about enrolling for programs or scheduling a visit to our studio.</h4>
+</div>
+<div>
+    <img src="images/IMG_5236.jpg" alt="Kids playing with Bernoulli principle" width="250" height="300">
+    <li><a href="#">Resources</a>
+        <h2>Educational Leadership Resources</h2>
+        <p>Look at what the experts are saying about Mastery Based Education</p>
+        <article>
+            <h3>Ken Robinson</h3>
+            <blockquote cite="https://www.ted.com/talks/sir_ken_robinson_do_schools_kill_creativity?language=en">
+            <p>&quot;We stigmatize mistakes. And we’re now running national educational systems where mistakes are the worst thing you can make — and the result is that we are educating people out of their creative capacities. &quot;</p>
+            </blockquote>
+            <p>Ken Robinson's memorable TED talk Called &quot; Do Schools Kill Creaativity? &quot;</p>
+        </article>
+        <article>
+            <h3>Signutra Mitra</h3>
+            <blockquote cite="https://www.ted.com/talks/sugata_mitra_the_future_of_learning">
+            <p>&quot; We need a pedagogy free from fear and focused on the magic of children's innate quest for information and understanding. &quot;</p>
+            </blockquote>
+            <p>Signutra Mitra and his revolutionalry TED talk &quot; The Future of Learning. &quot;</p>
+        </article>
+    </li>
+</div>
+<div>
+    <footer>
+        <address>
+        <p>Generation Maker Lab</p>
+        <p>1420 NW Vivion Rd Suite 102</p>
+        <p>Kansas City, MO 64118</p>
+        <p>816-718-0063</p>
+        <p><a href="mailto:genmakerlab@gmail.com">genmakerlab@gmail.com</a></p>
+        </address>
+    </footer>
+</div>
+</main>
+
+</body>
+</html>
