added some killer CSS styling

--- a/index.html
+++ b/index.html
@@ -3,49 +3,30 @@
 <head>
 <title>Generation Maker Lab</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<nav class ="navClass">
-	<ul >
-		<li><a href="index.html">Home</a></li>
-		<li><a href="#">World Builders Academy</a>
-			<ul class = "submenu">
-				<li><a href="school.html">Infant Care Center</a></li>
-				<li><a href="Primary.html">Preschool</a></li>
-				<li><a href="homeschool.html">Lower Elementry</a></li>
-			</ul>
-		</li>
-		<li><a href="#">Integrated Learning</a>
-			<ul class = "submenu">
-				<li><a href="3dprinting.html"> 3D Printing </a></li>
-				<li><a href="#"> Programming </a></li>
-				<li><a href="robotics.html"> Robotics </a></li>
-			</ul>
-        </li>
-		<li><a href="FQA.html">FQA</a></li>
-	</ul>
-</nav>
+<div>
+    <button class="btn home">Home</button>
+    <button class="btn worldbuildersacademy">World Builders Academy</button>
+    <button class="btn integratedlearning">Integrated Learning</button>
+    <button class="btn faq">FAQ</button>
+</div>
 <main>
 <div class ="text box">
-    <h1> Generation Maker Lab</h1>
-    <img src="images/genlogo.jpg" alt="Generation Maker Lab Logo " width="580" height="200">
-	<p>Mastery based curriculum in STEM designed for the curious of all ages to design and build.</p>
+    <br>
+    <br>
+    <img src="images/genlogo.jpg" alt="Generation Maker Lab Logo " class="logo" width="580" height="200">
+	<p>Mastery based academic curriculum in STEM designed for the curious of all ages to design and build.</p>
 	
 	<p>Schedule your visit today!</p>
-	<h3>Maker Workshops</h3>
-	<ul>
-		<li>Introduction to Game Design</li>
-		<li>3D Printing and Modeling</li>
-		<li>Web Design</li>
-		<li>Painting</li>
-		<li>Pottery</li>
-    </ul>
+	
     <img src="images/IMG_5250.jpg" alt="Child Scientist with magnifying glass" width="250" height="300">
     <h4>Ask about enrolling for programs or scheduling a visit to our studio.</h4>
+    <img src="images/IMG_5236.jpg" alt="Kids playing with Bernoulli principle" width="250" height="300">
 </div>
 <div>
-    <img src="images/IMG_5236.jpg" alt="Kids playing with Bernoulli principle" width="250" height="300">
-    <li><a href="#">Resources</a>
+    <img src="images/gearbanner.png" alt="mechanical gears " >
         <h2>Educational Leadership Resources</h2>
         <p>Look at what the experts are saying about Mastery Based Education</p>
         <article>
@@ -62,7 +43,7 @@
             </blockquote>
             <p>Signutra Mitra and his revolutionalry TED talk &quot; The Future of Learning. &quot;</p>
         </article>
-    </li>
+    
 </div>
 <div>
     <footer>
